fix: вывод статусов и сообщений при получении отчета + openapi
